--- a/src/index.html
+++ b/src/index.html
@@ -453,81 +453,36 @@
       <div class="row">
         <div class="col-sm-6 col-md-3">
           <div class="pb_pricing_v1 p-5 border text-center bg-white">
-            <h4 class="mb-3"></br>President</h4>
-            <img class="img-fluid rounded-circle" src="<%=require('./images/square23/ashna23.png')%>"
-              alt="Photograph of Ashna Khetan">
-            <p class="pb_font-15 mt-3 mb-0">Ashna Khetan</p>
-            <p class="pb_font-15"><a href="mailto:ashnak@stanford.edu"><i class="fa
-                              fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/ashna-khetan/"
-                target="_blank"><i class="fa fa-linkedin"></i></a></p>
+            <h4 class="mb-3"></br>President & Industry Lead</h4>
+            <img class="img-fluid rounded-circle" src="<%=require('./images/square23/josh23.png')%>"
+              alt="Photograph of Josh Delgadillo">
+            <p class="pb_font-15 mt-3 mb-0">Josh Delgadillo</p>
+            <p class="pb_font-15"><a href="mailto:joshdelg@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
+                href="https://www.linkedin.com/in/joshdelg/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
           </div>
         </div>
         <div class="col-sm-6 col-md-3">
           <div class="pb_pricing_v1 p-5 border text-center bg-white">
-            <h4 class="mb-3">Vice President & Fellowships</h4>
-            <img class="img-fluid rounded-circle" src="<%=require('./images/square23/june23.png')%>"
-              alt="Photograph of June Lee">
-            <p class="pb_font-15 mt-3 mb-0">June Lee</p>
-            <p class="pb_font-15"><a href="mailto:junelee1@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
-                href="https://www.linkedin.com/in/junelee619/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+            <h4 class="mb-3">Vice President & Impact Lab Lead</h4>
+            <img class="img-fluid rounded-circle" src="<%=require('./images/square23/annie23.png')%>"
+              alt="Photograph of Annie Lee">
+            <p class="pb_font-15 mt-3 mb-0">Annie Lee</p>
+            <p class="pb_font-15"><a href="mailto:annieee@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
+                href="http://linkedin.com/in/annie-lee-53a898280" target="_blank"><i class="fa fa-linkedin"></i></a></p>
           </div>
         </div>
         <div class="col-sm-6 col-md-3">
           <div class="pb_pricing_v1 p-5 border text-center bg-white">
             <h4 class="mb-3">Financial Officer</h4>
-            <img class="img-fluid rounded-circle" src="<%=require('./images/logo-square.png')%>" alt="Photograph of Hayden Thompson">
-            <p class="pb_font-15 mt-3 mb-0">Hayden Thompson</p>
+            <img class="img-fluid rounded-circle" src="<%=require('./images/logo-square.png')%>" alt="Photograph of Jillian Chang">
+            <p class="pb_font-15 mt-3 mb-0">Jillian Chang</p>
             <!-- <p class="pb_font-15"><a href="mailto:gdmagana@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
                 href="https://www.linkedin.com/in/senem/" target="_blank"><i class="fa fa-linkedin"></i></a></p> -->
           </div>
         </div>
         <div class="col-sm-6 col-md-3">
           <div class="pb_pricing_v1 p-5 border text-center bg-white">
-            <h4 class="mb-3"></br>Social Chair & Education Outreach</h4>
-            <img class="img-fluid rounded-circle" src="<%=require('./images/square23/winson23.png')%>"
-              alt="Photograph of Winson Cheng">
-            <p class="pb_font-15 mt-3 mb-0">Winson Cheng</p>
-            <p class="pb_font-15"><a href="mailto:winsonc@stanford.edu"><i class="fa
-                              fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/chengwinson/"
-                target="_blank"><i class="fa fa-linkedin"></i></a></p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6 col-md-3">
-          <div class="pb_pricing_v1 p-5 border text-center bg-white">
-            <h4 class="mb-3">AI+Social Good</h4>
-            <img class="img-fluid rounded-circle" src="<%=require('./images/square23/adam23.png')%>" alt="Photograph of Adam
-              Sun">
-            <p class="pb_font-15 mt-3 mb-0">Adam Sun</p>
-            <p class="pb_font-15"><a href="mailto:adsun@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
-                href="https://adamsunn.github.io/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3">
-          <div class="pb_pricing_v1 p-5 border text-center bg-white">
-            <h4 class="mb-3">AI+Social Good</h4>
-            <img class="img-fluid rounded-circle" src="<%=require('./images/square23/mona23.png')%>"
-              alt="Photograph of Mona Anvari">
-            <p class="pb_font-15 mt-3 mb-0">Mona Anvari</p>
-            <p class="pb_font-15"><a href="mailto:monaavr@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
-                href="https://www.linkedin.com/in/mona-anvari-0b92aa97/" target="_blank"><i
-                  class="fa fa-linkedin"></i></a></p>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3">
-          <div class="pb_pricing_v1 p-5 border text-center bg-white">
-            <h4 class="mb-3"></br>Discussions</h4>
-            <img class="img-fluid rounded-circle" src="<%=require('./images/square23/deepan23.png')%>"
-              alt="Photograph of Deepan Shah">
-            <p class="pb_font-15 mt-3 mb-0">Deepan Shah</p>
-            <p class="pb_font-15"><a href="mailto:deepans@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
-                href="https://www.linkedin.com/in/deepan-shah/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3">
-          <div class="pb_pricing_v1 p-5 border text-center bg-white">
-            <h4 class="mb-3"></br>Discussions</h4>
+            <h4 class="mb-3"></br>Social Chair & Industry Lead</h4>
             <img class="img-fluid rounded-circle" src="<%=require('./images/square23/steve23.png')%>"
               alt="Photograph of Steve Dou">
             <p class="pb_font-15 mt-3 mb-0">Steve Dou</p>
@@ -539,7 +494,53 @@
       <div class="row">
         <div class="col-sm-6 col-md-3">
           <div class="pb_pricing_v1 p-5 border text-center bg-white">
-            <h4 class="mb-3"></br>Fellowships</h4>
+            <h4 class="mb-3">AI+Social Good & Design Lead</h4>
+            <img class="img-fluid rounded-circle" src="<%=require('./images/square23/hannahcha.png')%>" alt="Photograph of Hannah Cha">
+            <p class="pb_font-15 mt-3 mb-0">Hannah Cha</p>
+            <p class="pb_font-15"><a href="mailto:hcha417@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
+                href="https://www.linkedin.com/in/hannah-cha/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <div class="pb_pricing_v1 p-5 border text-center bg-white">
+            <h4 class="mb-3">AI+Social Good Lead</h4>
+            <img class="img-fluid rounded-circle" src="<%=require('./images/square23/willli.png')%>"
+              alt="Photograph of Will Li">
+            <p class="pb_font-15 mt-3 mb-0">Will Li</p>
+            <p class="pb_font-15"><a href="mailto:willzli@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
+                href="https://www.linkedin.com/in/william-li-445045213/" target="_blank"><i
+                  class="fa fa-linkedin"></i></a></p>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <div class="pb_pricing_v1 p-5 border text-center bg-white">
+            <h4 class="mb-3"></br>Industry Lead</h4>
+            <!-- <img class="img-fluid rounded-circle" src="<%=require('./images/square23/deepan23.png')%>"
+              alt="Photograph of Deepan Shah"> -->
+            <img class="img-fluid rounded-circle" src="<%=require('./images/logo-square.png')%>" alt="Photograph of Naiela Islam">
+            <p class="pb_font-15 mt-3 mb-0">Naiela Islam</p>
+            <p class="pb_font-15"><a href="mailto:naiela@stanford.edu"><i class="fa fa-envelope"></i></a> 
+              <!-- | <a
+                href="https://www.linkedin.com/in/deepan-shah/" target="_blank"><i class="fa fa-linkedin"></i></a> -->
+              </p>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <div class="pb_pricing_v1 p-5 border text-center bg-white">
+            <h4 class="mb-3"></br>CS106S Lead</h4>
+            <img class="img-fluid rounded-circle" src="<%=require('./images/square23/ben23.png')%>"
+              alt="Photograph of Ben Yan">
+            <p class="pb_font-15 mt-3 mb-0">Ben Yan</p>
+            <p class="pb_font-15"><a href="mailto:bbyan@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
+                href="https://www.linkedin.com/in/benjaminbyan/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6 col-md-3">
+          <div class="pb_pricing_v1 p-5 border text-center bg-white">
+            <h4 class="mb-3"></br>Fellowships Lead</h4>
             <img class="img-fluid rounded-circle" src="<%=require('./images/square23/sherry23.png')%>" alt="Photograph of
               Sherry Xie">
             <p class="pb_font-15 mt-3 mb-0">Sherry Xie</p>
@@ -550,38 +551,17 @@
         </div>
         <div class="col-sm-6 col-md-3">
           <div class="pb_pricing_v1 p-5 border text-center bg-white">
-            <h4 class="mb-3"></br>CS106S</h4>
-            <img class="img-fluid rounded-circle" src="<%=require('./images/square23/ben23.png')%>"
-              alt="Photograph of Ben Yan">
-            <p class="pb_font-15 mt-3 mb-0">Ben Yan</p>
-            <p class="pb_font-15"><a href="mailto:bbyan@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
-                href="https://www.linkedin.com/in/benjaminbyan/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+            <h4 class="mb-3"></br>Fellowships Lead</h4>
+            <!-- <img class="img-fluid rounded-circle" src="<%=require('./images/square23/sherry23.png')%>" alt="Photograph of
+              Sherry Xie"> -->
+            <img class="img-fluid rounded-circle" src="<%=require('./images/logo-square.png')%>" alt="Photograph of Sally Wang">
+            <p class="pb_font-15 mt-3 mb-0">Sally Wang</p>
+            <p class="pb_font-15"><a href="mailto:sallyw02@stanford.edu"><i class="fa fa-envelope"></i></a> 
+              <!-- | <a
+                href="https://www.linkedin.com/in/yichen-sherry-xie/" target="_blank"><i class="fa fa-linkedin"></i></a> -->
             </p>
           </div>
         </div>
-        <div class="col-sm-6 col-md-3">
-          <div class="pb_pricing_v1 p-5 border text-center bg-white">
-            <h4 class="mb-3">Design &amp; Marketing</h4>
-            <img class="img-fluid rounded-circle" src="<%=require('./images/square23/sarah23.png')%>"
-              alt="Photograph of Sarah Dong">
-            <p class="pb_font-15 mt-3 mb-0">Sarah Dong</p>
-            <p class="pb_font-15"><a href="mailto:sarahjd@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
-                href="www.linkedin.com/in/sarah-dong-0882641a4" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3">
-          <div class="pb_pricing_v1 p-5 border text-center bg-white">
-            <h4 class="mb-3">Design &amp; Marketing</h4>
-            <img class="img-fluid rounded-circle" src="<%=require('./images/square23/dalynn23.png')%>"
-              alt="Photograph of Dalynn Miller">
-            <p class="pb_font-15 mt-3 mb-0">Dalynn Miller</p>
-            <p class="pb_font-15"><a href="mailto:dalynn@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
-                href="https://www.linkedin.com/in/dalynn-miller-849266179" target="_blank"><i
-                  class="fa fa-linkedin"></i></a></p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
         <div class="col-sm-6 col-md-3">
           <div class="pb_pricing_v1 p-5 border text-center bg-white">
             <h4 class="mb-3"></br>Studio</h4>
@@ -603,16 +583,8 @@
                   class="fa fa-linkedin"></i></a></p>
           </div>
         </div>
-        <div class="col-sm-6 col-md-3">
-          <div class="pb_pricing_v1 p-5 border text-center bg-white">
-            <h4 class="mb-3"></br>Impact Lab</h4>
-            <img class="img-fluid rounded-circle" src="<%=require('./images/square23/annie23.png')%>"
-              alt="Photograph of Anna Yang">
-            <p class="pb_font-15 mt-3 mb-0">Annie Lee</p>
-            <p class="pb_font-15"><a href="mailto:annieee@stanford.edu"><i class="fa fa-envelope"></i></a> | <a
-                href="http://linkedin.com/in/annie-lee-53a898280" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-          </div>
-        </div>
+      </div>
+      <!-- <div class="row">
         <div class="col-sm-6 col-md-3">
           <div class="pb_pricing_v1 p-5 border text-center bg-white">
             <h4 class="mb-3"></br>Webmaster</h4>
@@ -623,7 +595,7 @@
                 href="https://www.linkedin.com/in/joshdelg/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
           </div>
         </div>
-      </div>
+      </div> -->
   </section>
   <!-- ENDs ection -->
 
